--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     image: node:16-bullseye
     tty: true
     working_dir: /app
+    #command: yarn serve
     ports:
       - 3000:8080
     volumes:
@@ -18,6 +19,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    tty: true
     ports:
       - 8080:8080
     volumes:
