--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 __pycache__/
+backend/__pycache__/
+backend/app/__pycache__/
 backend/.env
 frontend/.env
+frontend/node_modules
+frontend/dist
 .DS_Store
