--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,4 +13,4 @@ COPY /app $APP_HOME/app
 
 EXPOSE 8080
 # uvicorn app.main:app --host 0.0.0.0 --port 8080 --reload
-# CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080", "--reload"]
